# paper-rag-agent

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  PUBLISH_GUIDE.md  README.md  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: default.yaml  local.yaml  production.yaml
docs/: ACCEPTANCE_REPORT.md  ARCHITECTURE.md  DEMO.md  EVAL_REPORT.md  HARD_CASES_REPORT.md  INTERVIEW_NOTES.md  M10_PRD.md  M11_PRD.md  M8_PRD.md  M9_PRD.md  OPERATIONS.md  PERFORMANCE.md  PERF_BASELINE.md  README.md  STATUS.md  SYSTEM_DESIGN.md  VERIFICATION_REPORT.md
docs/adrs/: 0001-four-subsystems.md  0002-mineru-local.md  0003-embedding-bge-m3.md  0004-dual-store.md  0005-paper-id.md  0006-agentic-paper-qa.md  0007-wiki-self-evolve.md  0008-deerflow-integration-and-guardrails.md  0009-m5-p0-fixes.md  0010-m5-p1-retrieval-async-fts5.md  0011-m5-p2-finishing-touches.md  0012-acceptance-fixes.md  0013-m6-large-eval-prod-streaming-bibtex.md  0014-abstain-three-tier-decision.md  0015-m8-service-deerflow-gateway.md  0016-m10-deliverables.md  0017-m11-data-feedback-loop.md  0018-m9-proactive-agent.md  0019-two-sqlite-databases.md  0020-gateway-middleware-and-observability.md  0021-langgraph-middleware-hardening.md
docs/diagrams/: abstain_flow.md  feedback_loop.md  proactive_flow.md
docs/integration/: README.md
docs/integration/frontend/: page.tsx
docs/integration/middleware/gateway/: auth.py  observability.py  protection.py
docs/integration/middleware/langgraph/: latency_tracking_middleware.py  pii_scrub_middleware.py  recursion_guard_middleware.py  token_usage_middleware.py
docs/integration/observability/: docker-compose.observability.yaml
docs/integration/observability/alertmanager/: alertmanager.yml
docs/integration/observability/grafana/provisioning/dashboards/: dashboards.yaml  gateway.json
docs/integration/observability/grafana/provisioning/datasources/: prometheus.yaml
docs/integration/observability/prometheus/: alerts.yml  prometheus.yml
docs/integration/router/: metrics.py  paper_rag.py
docs/integration/subagent/: paper_research.py  tools.py
examples/: 01_qa_basic.py  02_calibrate_abstain.py  03_collect_hard_cases.py  README.md
scripts/: _run_smoke.py  _run_tests.py  abstain_autocalibrate.py  ask.py  calibrate_abstain.py  collect_hard_cases.py  ingest_arxiv_direct.py  ingest_batch.py  ingest_one.py  init_store.py  migrate_user_id.py  publish_to_github.sh  up_qdrant.sh  wiki_review.py
src/paper_rag/: __init__.py  config.py
src/paper_rag/chunk/: __init__.py  builder.py  contextual.py  multimodal_chunker.py  sanity.py  section_splitter.py  text_chunker.py
src/paper_rag/deliver/: __init__.py  _common.py  dispatch.py  docx.py  latex_bib.py  pdf.py  pptx.py  survey_md.py
src/paper_rag/embed/: __init__.py  bge_m3.py
src/paper_rag/feedback/: __init__.py  collector.py  events.py  store.py
src/paper_rag/ingest/: __init__.py  arxiv_source.py  dedup.py  local_source.py  openalex_source.py  schema.py  semantic_scholar_source.py  sources.py  url_source.py
src/paper_rag/observability/: __init__.py  metrics.py  trace.py
src/paper_rag/parse/: __init__.py  dispatcher.py  fallback_pymupdf.py  mineru_local.py
src/paper_rag/proactive/: __init__.py  _db.py  auto_ingest_hook.py  cron_runner.py  digest.py  inbox.py  matcher.py  paper_access.py  stale.py  subscriptions.py  webhook.py
src/paper_rag/rag/: __init__.py  abstain.py  async_api.py  citation_check.py  history.py  intent_classifier.py  llm.py  qa_agentic.py  qa_cache.py  qa_simple.py  qa_stream.py  query_rewrite.py  reflect.py
src/paper_rag/retrieve/: __init__.py  dense.py  format.py  fts5.py  hybrid.py  pipeline.py  rerank.py  sparse_bm25.py
src/paper_rag/store/: __init__.py  ingest_pipeline.py  qdrant_store.py  sqlite_store.py
src/paper_rag/tools/: __init__.py  _schema.py  bibtex_export.py  paper_compare.py  paper_qa.py  paper_search.py  paper_section.py  wiki_lookup.py
src/paper_rag/utils/: __init__.py  ids.py  logger.py  paths.py
src/paper_rag/wiki/: __init__.py  concept_extractor.py  consistency.py  flow.py  normalize.py  queue.py  schema.py  store.py  triggers.py
tests/: conftest.py  perf_bench.py  test_abstain.py  test_chaos.py  test_coverage_boost.py  test_deliver.py  test_eval_metrics.py  test_feedback.py  test_finalization.py  test_gateway_paper_rag.py  test_langgraph_middleware.py  test_m5_fixes.py  test_m5_p1.py  test_m5_p2.py  test_middleware.py  test_proactive.py  test_pure.py  test_retrieve_pure.py  test_skeleton.py  test_wiki_pure.py
tests/eval/: README.md  __init__.py  judge.py  loader.py  metrics.py  qa_set.example.jsonl  qa_set.real.jsonl  run_ablation_context.py  run_eval.py  schema.py
