[project]
name = "paper-rag"
version = "0.1.0.dev0"
description = "Paper deep-research RAG subsystem for DeerFlow"
authors = [{ name = "paper_rag contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["rag", "llm", "agent", "academic", "deerflow", "qdrant", "mineru"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Base deps: just enough to import paper_rag.* and run pure-logic tests.
# Heavy ML / IO deps are lazy-imported inside the modules that need them
# and are grouped under `[project.optional-dependencies]` below.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "tqdm>=4.66",
    "qdrant-client>=1.9",
    "sqlmodel>=0.0.16",
    "rank-bm25>=0.2.2",
    "openai>=1.40",                  # OpenAI-compatible client (DashScope/Qwen, OpenAI direct)
    "python-dotenv>=1.0",            # .env loading
]

[project.optional-dependencies]
# Heavy ML deps for embedding + reranking. ~3GB of model weights at runtime.
embed = [
    "FlagEmbedding>=1.2.10",
]
# arXiv / OpenAlex / Semantic Scholar ingest sources.
ingest = [
    "arxiv>=2.1",
    "pymupdf>=1.24",
]
# Mineru-based PDF parser (optional, falls back to pymupdf if absent).
mineru = ["magic-pdf>=0.7.0b1"]
# DeerFlow gateway adapter (LangChain @tool wrappers).
deerflow = [
    "langchain>=0.3",
    "langchain-core>=0.3",
]
# M10 deliverable generators (PowerPoint / Word).
deliver = [
    "python-pptx>=0.6.23",
    "python-docx>=1.1.2",
]
# Optional PDF rendering (reportlab) for deliver.pdf path.
deliver-pdf = [
    "reportlab>=4.0",
]
# M9 standalone cron runner (Docker sidecar).
proactive = [
    "apscheduler>=3.10",
]
# Development + CI tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "fastapi>=0.115",
    "sse-starlette>=2.1",
]
# Convenience meta-extra: install everything needed to actually run a server.
full = [
    "paper-rag[embed,ingest,deliver,deliver-pdf,proactive,deerflow]",
]

[project.urls]
Homepage = "https://github.com/TongTong0828/paper-rag-agent"
Repository = "https://github.com/TongTong0828/paper-rag-agent"
Documentation = "https://github.com/TongTong0828/paper-rag-agent/tree/main/docs"
Changelog = "https://github.com/TongTong0828/paper-rag-agent/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/TongTong0828/paper-rag-agent/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---- Ruff ----
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "RUF",           # ruff-specific
    "SIM",           # flake8-simplify
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # default arg call (pydantic Field)
    "RUF012", # mutable class attrs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401"]
"scripts/**" = ["F401"]
"src/paper_rag/utils/logger.py" = ["F401"]   # optional loguru import

[tool.ruff.lint.isort]
known-first-party = ["paper_rag"]

# ---- Pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--tb=short"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
